--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>test page</title>
   </head>
   <body>
-    this is test.<br />admin production environment
+    this is test.<br />admin staging environment
   </body>
 </html>
